<resources>
    <string name="app_name">Telegraphic</string>
    <string name="follow_btn">Follow</string>
    <string name="followed_btn">Unfollow</string>
    <string name="visit_button">Visit</string>
    <string name="add_comment_button">Add comment</string>
    <string name="test_admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="testDeviceID">6686105664A3F125E73234FAE8ADAC8D</string>
    <string name="hint_name">Full name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_register">Sign up</string>
    <string name="btn_link_to_login">Logged already! Sign in</string>
    <string name="btn_login">Log in</string>
    <string name="btn_link_to_register">Do not have account! Sign up now</string>
    <string name="banner_home_footer" translatable="false">ca-app-pub-6032440957109327/6925717894</string>
    <string name="facebook_app_id" translatable="false">480876635581729</string>
    <string name="tx_another_way_to_login">or connect with:</string>
    <string name="register_pdialog">Registering ...</string>
    <string name="faild_facebook_reg">Failed Facebook Registration</string>
    <string name="faild_google_reg">Failed google registration</string>
    <string name="login_pdialog">Login...</string>
    <string name="update_alert_text">Version of the application is outdated, update to run the application properly</string>
    <string name="btn_update">Update</string>
    <string name="btn_exit">exit</string>
    <string name="title_update_dialog">New Update</string>
</resources>
