<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_register"
    tools:context="com.dev3raby.infographic.Activities.RegisterActivity">
    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="15dp">



        <android.support.v7.widget.CardView
            android:layout_marginTop="16dp"
            android:id="@+id/data_card"
            card_view:cardCornerRadius="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardUseCompatPadding="true"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="15dp"
                    android:id="@+id/input_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/name"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"

                        android:hint="@string/hint_name"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:inputType="textCapWords"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/lite_gray" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/email"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/lite_gray" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/lite_gray"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <!-- Login Button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_below="@id/data_card"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_login_bg"
            android:text="@string/btn_register"
            android:textColor="@color/colorBlack" />

        <!-- Link to Login Screen -->

        <Button
            android:layout_below="@id/btnRegister"
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />




    </RelativeLayout>
</ScrollView>
